fix(panel): add correct heading and description line height and alignment

--- a/packages/calcite-components/src/components/panel/panel.scss
+++ b/packages/calcite-components/src/components/panel/panel.scss
@@ -25,11 +25,11 @@
 
   .header-content {
     .heading {
-      font-size: var(--calcite-font-size--1);
+      @apply text-n1h;
     }
 
     .description {
-      font-size: var(--calcite-font-size--2);
+      @apply text-n2h;
     }
   }
 }
@@ -40,11 +40,11 @@
 
   .header-content {
     .heading {
-      font-size: var(--calcite-font-size-0);
+      @apply text-0h;
     }
 
     .description {
-      font-size: var(--calcite-font-size--1);
+      @apply text-n1h;
     }
   }
 }
@@ -55,11 +55,11 @@
 
   .header-content {
     .heading {
-      font-size: var(--calcite-font-size-1);
+      @apply text-1h;
     }
 
     .description {
-      font-size: var(--calcite-font-size-0);
+      @apply text-0h;
     }
   }
 }
@@ -128,7 +128,7 @@
     flex-none
     break-words
     p-0;
-    line-height: var(--calcite-font-line-height-relative-snug);
+    line-height: var(--calcite-font-line-height-relative-snug) !important;
   }
 
   .heading {
